--- a/index.html
+++ b/index.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- saidazim -->
     <div></div>
 
     <!-- abdulaziz -->
-     <div></div>
+    <div class="conteiner">
+
+        <div class="box2">
+            <div class="miniBox">
+                <img src="Server.png" width="55" height="55" alt="">
+                <div class="miniBox2">
+                    <p class="text1">90+</p>
+                    <p class="text2">Server</p>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="miniBox">
+                <img src="location.png" width="55" height="55" alt="">
+                <div class="miniBox2">
+                    <p class="text1">30+</p>
+                    <p class="text2">Locations</p>
+
+                    <hr>
+                </div>
+
+            </div>
+            <div class="miniBox">
+                <img src="user.png" width="55" height="55" alt="">
+                <div class="miniBox2">
+                    <p class="text1">50+</p>
+                    <p class="text2">Users</p>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 
 
 </body>
+
 </html>
